--- a/Users/templates/delete-user.html
+++ b/Users/templates/delete-user.html
@@ -1,3 +1,4 @@
+<!-- Archivo HTML para la vista Delete -->
 {% load static %}
 <!DOCTYPE html>
 
@@ -5,13 +6,19 @@
     <head>
         <title> Eliminar Usuario {{object}} </title>
         <script src = "{% static 'buttonScripts.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'style.css' %}">
     </head>
     <body>
+        <!-- Titulo de la Pagina -->
         <h1> Eliminar Usuario </h1>
+
+        <!-- Metodo POST para ELIMINAR el registro -->
         <form method = "post"> {% csrf_token %}
             <p> ¿Esta seguro de que desea eliminar al usuario "{{ object }}"?</p>
             <input type = "submit" value = "Eliminar Usuario">
         </form>
+
+        <!-- Boton de Cancelar -->
         <button onclick = "redirect(this)"> Cancelar </button>
     </body>
 </html>
