--- a/Users/templates/delete-user.html
+++ b/Users/templates/delete-user.html
@@ -15,10 +15,10 @@
         <!-- Metodo POST para ELIMINAR el registro -->
         <form method = "post"> {% csrf_token %}
             <p> ¿Esta seguro de que desea eliminar al usuario "{{ object }}"?</p>
-            <input type = "submit" value = "Eliminar Usuario">
+            <input type = "submit" value = "Eliminar Usuario" class = "button delete">
         </form>
 
         <!-- Boton de Cancelar -->
-        <button onclick = "redirect(this)"> Cancelar </button>
+        <button onclick = "redirect(this)" class = "button"> Cancelar </button>
     </body>
 </html>
