--- a/Users/templates/static/style.css
+++ b/Users/templates/static/style.css
@@ -10,6 +10,18 @@ h1 {
     color: #191DA3;
 }
 
+button {
+    display: inline-block;
+    background-color: #555555;
+    color: white;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px 15px;
+    border-radius: 5px
+}
+
 .user-table {
     display: block;
 }
@@ -32,6 +44,3 @@ h1 {
     color: #fff;
 }
 
-button {
-    background
-}
